# mcpixel

./: .gitignore  CMakeLists.txt  README.md  example.cpp
cmake/: version.h.in
include/mcpixel/: common.h  format.h  hypixel_api.h  hypixel_player.h  logger.h  mcpixel.h  minecraft_api.h  minecraft_player.h
mcpixel/: hypixel_api.cpp  hypixel_player.cpp  logger.cpp  minecraft_api.cpp  minecraft_player.cpp
